--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
    "license": "MIT",
    "authors": [
        {
-           "name": "Sylvain Lorinet",
-           "email": "sylvain.lorinet@gmail.com"
+           "name": "Taylor",
+           "email": "zhoullei0905@gmail.com"
        }
     ],
     "require": {
